src/main/java/com/shafiqistaken/xql/grammer/XqlParserParser.java
// Generated from XqlParser.g4 by ANTLR 4.12.0

    package com.shafiqistaken.xql.grammer;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class XqlParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUAL_OPERATOR=1, GREATER_OR_EQUAL_OPERATOR=2, GREATER_THAN_OPERATOR=3, 
		LESS_OR_EQUAL_OPERATOR=4, LESS_THAN_OPERATOR=5, NOT_EQUAL_OPERATOR=6, 
		PLUS_OPERATOR=7, MINUS_OPERATOR=8, MULT_OPERATOR=9, DIV_OPERATOR=10, MOD_OPERATOR=11, 
		COMMA_SYMBOL=12, OPEN_PAR_SYMBOL=13, CLOSE_PAR_SYMBOL=14, DOT_SYMBOL=15, 
		BACK_TICK_QUOTED_ID=16, SELECT_SYMBOL=17, ALL_SYMBOL=18, DISTINCT_SYMBOL=19, 
		FROM_SYMBOL=20, WHERE_SYMBOL=21, IS_SYMBOL=22, NOT_SYMBOL=23, TRUE_SYMBOL=24, 
		FALSE_SYMBOL=25, NULL_SYMBOL=26, AND_SYMBOL=27, OR_SYMBOL=28, BETWEEN_SYMBOL=29, 
		LIKE_SYMBOL=30, DATE_SYMBOL=31, AVG_SYMBOL=32, COUNT_SYMBOL=33, MIN_SYMBOL=34, 
		MAX_SYMBOL=35, STDDEV_SYMBOL=36, SUM_SYMBOL=37, INT_NUMBER=38, DECIMAL_NUMBER=39, 
		FLOAT_NUMBER=40, DOUBLE_QUOTED_TEXT=41, SINGLE_QUOTED_TEXT=42;
	public static final int
		RULE_selectStatement = 0, RULE_selectItemList = 1, RULE_selectItem = 2, 
		RULE_fromClause = 3, RULE_whereClause = 4, RULE_expr = 5, RULE_boolPrimaryExpression = 6, 
		RULE_compOp = 7, RULE_predicate = 8, RULE_predicateOperations = 9, RULE_bitExpr = 10, 
		RULE_simpleExpr = 11, RULE_columnRef = 12, RULE_functionCall = 13, RULE_exprWithParentheses = 14, 
		RULE_sumExpr = 15, RULE_literal = 16, RULE_textLiteral = 17, RULE_numLiteral = 18, 
		RULE_boolLiteral = 19, RULE_nullLiteral = 20, RULE_sheetName = 21, RULE_identifier = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"selectStatement", "selectItemList", "selectItem", "fromClause", "whereClause", 
			"expr", "boolPrimaryExpression", "compOp", "predicate", "predicateOperations", 
			"bitExpr", "simpleExpr", "columnRef", "functionCall", "exprWithParentheses", 
			"sumExpr", "literal", "textLiteral", "numLiteral", "boolLiteral", "nullLiteral", 
			"sheetName", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'>='", "'>'", "'<='", "'<'", "'!='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "','", "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EQUAL_OPERATOR", "GREATER_OR_EQUAL_OPERATOR", "GREATER_THAN_OPERATOR", 
			"LESS_OR_EQUAL_OPERATOR", "LESS_THAN_OPERATOR", "NOT_EQUAL_OPERATOR", 
			"PLUS_OPERATOR", "MINUS_OPERATOR", "MULT_OPERATOR", "DIV_OPERATOR", "MOD_OPERATOR", 
			"COMMA_SYMBOL", "OPEN_PAR_SYMBOL", "CLOSE_PAR_SYMBOL", "DOT_SYMBOL", 
			"BACK_TICK_QUOTED_ID", "SELECT_SYMBOL", "ALL_SYMBOL", "DISTINCT_SYMBOL", 
			"FROM_SYMBOL", "WHERE_SYMBOL", "IS_SYMBOL", "NOT_SYMBOL", "TRUE_SYMBOL", 
			"FALSE_SYMBOL", "NULL_SYMBOL", "AND_SYMBOL", "OR_SYMBOL", "BETWEEN_SYMBOL", 
			"LIKE_SYMBOL", "DATE_SYMBOL", "AVG_SYMBOL", "COUNT_SYMBOL", "MIN_SYMBOL", 
			"MAX_SYMBOL", "STDDEV_SYMBOL", "SUM_SYMBOL", "INT_NUMBER", "DECIMAL_NUMBER", 
			"FLOAT_NUMBER", "DOUBLE_QUOTED_TEXT", "SINGLE_QUOTED_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XqlParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT_SYMBOL() { return getToken(XqlParserParser.SELECT_SYMBOL, 0); }
		public SelectItemListContext selectItemList() {
			return getRuleContext(SelectItemListContext.class,0);
		}
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitSelectStatement(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(SELECT_SYMBOL);
			setState(47);
			selectItemList();
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM_SYMBOL) {
				{
				setState(48);
				fromClause();
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE_SYMBOL) {
				{
				setState(51);
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectItemListContext extends ParserRuleContext {
		public TerminalNode ALL_SYMBOL() { return getToken(XqlParserParser.ALL_SYMBOL, 0); }
		public List<SelectItemContext> selectItem() {
			return getRuleContexts(SelectItemContext.class);
		}
		public SelectItemContext selectItem(int i) {
			return getRuleContext(SelectItemContext.class,i);
		}
		public List<TerminalNode> COMMA_SYMBOL() { return getTokens(XqlParserParser.COMMA_SYMBOL); }
		public TerminalNode COMMA_SYMBOL(int i) {
			return getToken(XqlParserParser.COMMA_SYMBOL, i);
		}
		public TerminalNode DISTINCT_SYMBOL() { return getToken(XqlParserParser.DISTINCT_SYMBOL, 0); }
		public SelectItemListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectItemList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterSelectItemList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitSelectItemList(this);
		}
	}

	public final SelectItemListContext selectItemList() throws RecognitionException {
		SelectItemListContext _localctx = new SelectItemListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectItemList);
		int _la;
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALL_SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(ALL_SYMBOL);
				}
				break;
			case BACK_TICK_QUOTED_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				selectItem();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA_SYMBOL) {
					{
					{
					setState(56);
					match(COMMA_SYMBOL);
					setState(57);
					selectItem();
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DISTINCT_SYMBOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(DISTINCT_SYMBOL);
				setState(64);
				selectItem();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectItemContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterSelectItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitSelectItem(this);
		}
	}

	public final SelectItemContext selectItem() throws RecognitionException {
		SelectItemContext _localctx = new SelectItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FromClauseContext extends ParserRuleContext {
		public TerminalNode FROM_SYMBOL() { return getToken(XqlParserParser.FROM_SYMBOL, 0); }
		public SheetNameContext sheetName() {
			return getRuleContext(SheetNameContext.class,0);
		}
		public FromClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterFromClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitFromClause(this);
		}
	}

	public final FromClauseContext fromClause() throws RecognitionException {
		FromClauseContext _localctx = new FromClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fromClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(FROM_SYMBOL);
			setState(70);
			sheetName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereClauseContext extends ParserRuleContext {
		public TerminalNode WHERE_SYMBOL() { return getToken(XqlParserParser.WHERE_SYMBOL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitWhereClause(this);
		}
	}

	public final WhereClauseContext whereClause() throws RecognitionException {
		WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whereClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(WHERE_SYMBOL);
			setState(73);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprOrContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OR_SYMBOL() { return getToken(XqlParserParser.OR_SYMBOL, 0); }
		public ExprOrContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterExprOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitExprOr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprIsContext extends ExprContext {
		public Token type;
		public BoolPrimaryExpressionContext boolPrimaryExpression() {
			return getRuleContext(BoolPrimaryExpressionContext.class,0);
		}
		public TerminalNode IS_SYMBOL() { return getToken(XqlParserParser.IS_SYMBOL, 0); }
		public TerminalNode TRUE_SYMBOL() { return getToken(XqlParserParser.TRUE_SYMBOL, 0); }
		public TerminalNode FALSE_SYMBOL() { return getToken(XqlParserParser.FALSE_SYMBOL, 0); }
		public TerminalNode NOT_SYMBOL() { return getToken(XqlParserParser.NOT_SYMBOL, 0); }
		public ExprIsContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterExprIs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitExprIs(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprAndContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND_SYMBOL() { return getToken(XqlParserParser.AND_SYMBOL, 0); }
		public ExprAndContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterExprAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitExprAnd(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ExprIsContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(76);
			boolPrimaryExpression(0);
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(77);
				match(IS_SYMBOL);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT_SYMBOL) {
					{
					setState(78);
					match(NOT_SYMBOL);
					}
				}

				setState(81);
				((ExprIsContext)_localctx).type = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TRUE_SYMBOL || _la==FALSE_SYMBOL) ) {
					((ExprIsContext)_localctx).type = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(90);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ExprAndContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(84);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(85);
						((ExprAndContext)_localctx).op = match(AND_SYMBOL);
						setState(86);
						expr(3);
						}
						break;
					case 2:
						{
						_localctx = new ExprOrContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(87);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(88);
						((ExprOrContext)_localctx).op = match(OR_SYMBOL);
						setState(89);
						expr(2);
						}
						break;
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolPrimaryExpressionContext extends ParserRuleContext {
		public BoolPrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolPrimaryExpression; }
	 
		public BoolPrimaryExpressionContext() { }
		public void copyFrom(BoolPrimaryExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExprPredicateContext extends BoolPrimaryExpressionContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PrimaryExprPredicateContext(BoolPrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterPrimaryExprPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitPrimaryExprPredicate(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExprCompareContext extends BoolPrimaryExpressionContext {
		public BoolPrimaryExpressionContext boolPrimaryExpression() {
			return getRuleContext(BoolPrimaryExpressionContext.class,0);
		}
		public CompOpContext compOp() {
			return getRuleContext(CompOpContext.class,0);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PrimaryExprCompareContext(BoolPrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterPrimaryExprCompare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitPrimaryExprCompare(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExprIsNullContext extends BoolPrimaryExpressionContext {
		public BoolPrimaryExpressionContext boolPrimaryExpression() {
			return getRuleContext(BoolPrimaryExpressionContext.class,0);
		}
		public TerminalNode IS_SYMBOL() { return getToken(XqlParserParser.IS_SYMBOL, 0); }
		public TerminalNode NULL_SYMBOL() { return getToken(XqlParserParser.NULL_SYMBOL, 0); }
		public TerminalNode NOT_SYMBOL() { return getToken(XqlParserParser.NOT_SYMBOL, 0); }
		public PrimaryExprIsNullContext(BoolPrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterPrimaryExprIsNull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitPrimaryExprIsNull(this);
		}
	}

	public final BoolPrimaryExpressionContext boolPrimaryExpression() throws RecognitionException {
		return boolPrimaryExpression(0);
	}

	private BoolPrimaryExpressionContext boolPrimaryExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BoolPrimaryExpressionContext _localctx = new BoolPrimaryExpressionContext(_ctx, _parentState);
		BoolPrimaryExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_boolPrimaryExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new PrimaryExprPredicateContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(96);
			predicate();
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(108);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new PrimaryExprIsNullContext(new BoolPrimaryExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_boolPrimaryExpression);
						setState(98);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(99);
						match(IS_SYMBOL);
						setState(101);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==NOT_SYMBOL) {
							{
							setState(100);
							match(NOT_SYMBOL);
							}
						}

						setState(103);
						match(NULL_SYMBOL);
						}
						break;
					case 2:
						{
						_localctx = new PrimaryExprCompareContext(new BoolPrimaryExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_boolPrimaryExpression);
						setState(104);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(105);
						compOp();
						setState(106);
						predicate();
						}
						break;
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompOpContext extends ParserRuleContext {
		public TerminalNode EQUAL_OPERATOR() { return getToken(XqlParserParser.EQUAL_OPERATOR, 0); }
		public TerminalNode GREATER_OR_EQUAL_OPERATOR() { return getToken(XqlParserParser.GREATER_OR_EQUAL_OPERATOR, 0); }
		public TerminalNode GREATER_THAN_OPERATOR() { return getToken(XqlParserParser.GREATER_THAN_OPERATOR, 0); }
		public TerminalNode LESS_OR_EQUAL_OPERATOR() { return getToken(XqlParserParser.LESS_OR_EQUAL_OPERATOR, 0); }
		public TerminalNode LESS_THAN_OPERATOR() { return getToken(XqlParserParser.LESS_THAN_OPERATOR, 0); }
		public TerminalNode NOT_EQUAL_OPERATOR() { return getToken(XqlParserParser.NOT_EQUAL_OPERATOR, 0); }
		public CompOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterCompOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitCompOp(this);
		}
	}

	public final CompOpContext compOp() throws RecognitionException {
		CompOpContext _localctx = new CompOpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_compOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 126L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PredicateContext extends ParserRuleContext {
		public BitExprContext bitExpr() {
			return getRuleContext(BitExprContext.class,0);
		}
		public PredicateOperationsContext predicateOperations() {
			return getRuleContext(PredicateOperationsContext.class,0);
		}
		public TerminalNode NOT_SYMBOL() { return getToken(XqlParserParser.NOT_SYMBOL, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XqlParserListener ) ((XqlParserListener)listener).exitPredicate(this);
		}
	}
